# G-Variables

./: README.md  angular.json  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: extension.rs  main.rs  ui.rs
src/app/: app.component.spec.ts  app.component.ts
