[package]
name = "g_variables"
version = "0.1.0"
description = "Ultimate variables tools"
authors = ["!K2"]
license = ""
repository = ""
default-run = "g_variables"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [] }
g-rust = { version = "0.0.1-beta.9", git = "https://github.com/lucasdesousa/G-Rust.git" }
kv = { version = "0.22.0" ,features = ["json-value"] }
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
